--- a/specs/dogmaseq-lll/spec.yaml
+++ b/specs/dogmaseq-lll/spec.yaml
@@ -19,7 +19,23 @@ library_protocol: null
 library_kit: null
 sequence_protocol: Illumina NovaSeq 6000 (S2 Reagent Kit v1.5)
 sequence_kit: null
-sequence_spec: []
+sequence_spec:
+- !Read
+  read_id: R1.fastq.gz
+  name: Read 1
+  modality: illumina_truseq_prep
+  primer_id: generic_primer1
+  min_len: 1
+  max_len: 250
+  strand: pos
+- !Read
+  read_id: R2.fastq.gz
+  name: Read 2
+  modality: illumina_truseq_prep
+  primer_id: generic_primer2
+  min_len: 1
+  max_len: 250
+  strand: neg
 library_spec:
 - !Region
   region_id: protein
